@@ -104,6 +104,7 @@ struct _log
 	gint selected_line_first;
 	gint selected_line_last;
 	gint total_lines; /* no of lines in the file */
+  gint displayed_lines; /* no of lines displayed now */
 	LogLine **lines; /* actual lines */
 	gboolean first_time;
 	gboolean has_date;
