@@ -1,5 +1,10 @@
 2005-10-11  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c (logview_menus_set_state): Fix the menu sensitivity
+	logic following the recent change in monitor behavior.
+
+2005-10-11  Vincent Noel  <vnoel@cox.net>
+
 	* logview.c (logview_monospace_font_changed): New.
 	(CreateMainWin): Listen to changes to the monospace font gconf key
 	and update the window accordingly.
